--- a/Quietdrive.uproject
+++ b/Quietdrive.uproject
@@ -3,6 +3,16 @@
 	"EngineAssociation": "4.9",
 	"Category": "",
 	"Description": "",
+	"Modules": [
+		{
+			"Name": "Quietdrive",
+			"Type": "Runtime",
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"Engine"
+			]
+		}
+	],
 	"Plugins": [
 		{
 			"Name": "Paper2D",
